helm/wazuh/filebeat-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: wazuh-filebeat
  namespace: wazuh
  labels:
    app: wazuh-filebeat
spec:
  selector:
    matchLabels:
      app: wazuh-filebeat
  template:
    metadata:
      labels:
        app: wazuh-filebeat
    spec:
      serviceAccountName: wazuh-filebeat
      terminationGracePeriodSeconds: 30
      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat-oss:7.10.2
          args: ["-c", "/etc/filebeat/filebeat.yml", "-e"]
          securityContext:
            runAsUser: 0
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /etc/filebeat/filebeat.yml
              subPath: filebeat.yml
              readOnly: true
            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: containerlog
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: filebeat-data
              mountPath: /usr/share/filebeat/data
      volumes:
        - name: config
          configMap:
            name: wazuh-filebeat-daemonset-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: containerlog
          hostPath:
            path: /var/lib/docker/containers
        - name: filebeat-data
          hostPath:
            path: /var/lib/filebeat-wazuh-data
            type: DirectoryOrCreate
